# otoge_input_viewer

./: .gitignore  Makefile  README.md  build.sh  disp_iidx_buttons.pyw  gui.py  icon.py  otoge_input_viewer.pyw  pyproject.toml  settings.py  setup.py  test_ws.py  to_bin  tooltip.py  update.py
.pyarmor/: config
html/: buttons.html  gf.css  gf.html  iidx.css  iidx_1p.html  iidx_1p_color.html  iidx_2p.html  iidx_2p_color.html  iidx_color.css  iidx_dp.html  iidx_dp_color.html  property.css  scratch.css  scratch_speed.html  sdvx.css  sdvx.html  sdvx_color.css  sdvx_color.html  stats_only.html  websocket.css  wstest.html
src/: count_history.py  key_config.py  settings.py  update.py
