[project]
name = "otoge-input-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "cx-freeze>=8.6.4",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
    "pyside6>=6.7.0",
    "requests>=2.32.4",
    "websockets>=15.0.1",
]
